# teleapp

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  LLM_MEMORY.md  OPERATIONS.md  PLAN.md  README.md  RELEASE.md  bootstrap_teleapp.bat  bootstrap_teleapp.sh  build_teleapp.bat  build_teleapp.sh  pyproject.toml  start_teleapp.bat  start_teleapp.sh
.github/workflows/: release.yml
examples/: README.md  callback_app.py  echo_app.py  hello_app.py  media_ai_app.py  media_app.py  media_audio_app.py  media_misc_app.py
reports/: README.md  index.json  soak-report-20260407-150517.json  soak-report-20260407-150517.md
scripts/: build_report_index.py  run_reload_probe.py  run_soak.py  run_telegram_smoke.py
teleapp/: __init__.py  __main__.py  app.py  cli.py  config.py  context.py  handlers.py  hot_reload.py  protocol.py  response.py  runner.py  scaffold.py  singleton.py  state.py  supervisor.py  telegram_gateway.py
tests/: test_app.py  test_config.py  test_gateway.py  test_protocol.py  test_singleton.py  test_supervisor.py
