[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleapp"
version = "0.1.1"
description = "Telegram-hosted Python app runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=22.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
teleapp = "teleapp.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["teleapp*"]
